--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="images/x-icon" href="<%= MODULE_FTP_BASE_URL %>/favicon.ico">
     <link rel="preload" href="<%= MODULE_COMMON_BASE_URL %>/lib/vendor.min.js" as="script">
     <link rel="preload" href="<%= MODULE_COMMON_BASE_URL %>/element/element-ui.min.js" as="script">
+    <link rel="preload" href="<%= MODULE_COMMON_BASE_URL %>/xcbase/xcbase.js" as="script">
     <link href="<%= MODULE_COMMON_BASE_URL %>/element/element-blue.css" type="text/css" rel="stylesheet"/>
     <link href="<%= MODULE_COMMON_BASE_URL %>/widget/common-blue.css" type="text/css" rel="stylesheet">
 </head>
@@ -14,5 +15,6 @@
     <div id="app"></div>
     <script src="<%= MODULE_COMMON_BASE_URL %>/lib/vendor.min.js"></script>
     <script src="<%= MODULE_COMMON_BASE_URL %>/element/element-ui.min.js"></script>
+    <script src="<%= MODULE_COMMON_BASE_URL %>/xcbase/xcbase.js"></script>
 </body>
 </html>
